-
Type:
Bug
-
Resolution: Fixed
-
Priority:
P2
-
Affects Version/s: 8u191, jfx11
-
Component/s: javafx
| Issue | Fix Version | Assignee | Priority | Status | Resolution | Resolved In Build |
|---|---|---|---|---|---|---|
| JDK-8208381 | 8u202 | Arunprasad Rajkumar | P2 | Resolved | Fixed | b01 |
| JDK-8208503 | 8u192 | Arunprasad Rajkumar | P2 | Resolved | Fixed | b04 |
| JDK-8208504 | 8u191 | Arunprasad Rajkumar | P2 | Closed | Fixed | b04 |
Try dragging of text content or URL Links into a text field or container, the contents are not moved to the target container. Also the drag icon never appears while dragging.
Regression: Yes, previous builds the issue is not observed.
Issue introduced in : 8u191 b02,
Issue Type : OS generic.
Use the attached html files to reproduce the issue,
Regression: Yes, previous builds the issue is not observed.
Issue introduced in : 8u191 b02,
Issue Type : OS generic.
Use the attached html files to reproduce the issue,
- backported by
-
JDK-8208381 Drag and drop of text contents and URL links functionalities are broken in Webview
-
- Resolved
-
-
JDK-8208503 Drag and drop of text contents and URL links functionalities are broken in Webview
-
- Resolved
-
-
JDK-8208504 Drag and drop of text contents and URL links functionalities are broken in Webview
-
- Closed
-
- relates to
-
JDK-8199474 Update to 606.1 version of WebKit
-
- Resolved
-