8208114: Drag and drop of text contents and URL links functionalities are broken in Webview

Reviewed-by: mbilla, kcr